# pbrlab

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  vcsetup-2022.bat
cli/: CMakeLists.txt  pbrlab-cli.cc
data/: cornellbox_suzanne_lucy.mtl
pc/: CMakeLists.txt  glfw-window.cc  glfw-window.h  gui-parameter.h  imgui-parameter.h  pbrlab-cli.cc  pbrlab-gui.cc  pc-common.cc  pc-common.h  sdl-window.cc  sdl-window.h
scripts/: bootstrap-linux-aarch64.sh  bootstrap-linux-cli.sh  bootstrap-linux-external-embree.sh  bootstrap-linux.sh  bootstrap-macos.sh
src/: CMakeLists.txt  curve-util.cc  curve-util.h  image-utils.cc  image-utils.h  light-manager.cc  light-manager.h  light-param.h  local-scene.h  main.cc  material-param.h  matrix.cc  matrix.h  mesh-instance.h  pbrlab-util.h  pbrlab_math.h  ray.h  render-config.h  render-layer.cc  render-layer.h  render-tile.cc  render-tile.h  render.cc  render.h  scene.cc  scene.h  texture.cc  texture.h  type.h
src/closure/: closure-util.h  energy‐conserving-hair-bsdf.h  lambert.h  microfacet-ggx.h
src/io/: curve-mesh-io.cc  curve-mesh-io.h  cyhair.cc  cyhair.h  image-io.cc  image-io.h  render-config-io.cc  render-config-io.h  scene-description-io.cc  scene-description-io.h  stb_image.cc  stb_image_write.cc  tiny_obj_loader.cc  tinyexr.cc  triangle-mesh-io.cc  triangle-mesh-io.h
src/mesh/: attribute.h  cubic-bezier-curve-mesh.cc  cubic-bezier-curve-mesh.h  mesh.h  triangle-mesh.cc  triangle-mesh.h
src/random/: rng.h
src/raytracer/: mesh.h  raytracer.cc  raytracer.h  raytracer_impl.cc  raytracer_impl.h
src/sampler/: sampling-utils.h
src/scene-description/: scene-description.cc  scene-description.h
src/shader/: cycles-principled-shader.cc  cycles-principled-shader.h  hair-shader.cc  hair-shader.h  random-walk-sss.h  shader-utils.h  shader.cc  shader.h
